# gull

./: .gitignore  LICENSE  README.md  pyproject.toml  test_script.sn
src/gull/cli/: __init__.py
src/gullplot/: __init__.py  __main__.py
src/gullplot/cli/: __init__.py
src/seal/: __main__.py
src/seal/cli/: __init__.py
tests/: __init__.py  test_cli.py
