[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gull"
dynamic = ["version"]
description = 'Terminal based plotting with seaborn'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
  "click",
  "seaborn",
  "matplotlib",
  "pandas",
]

[project.urls]

[project.scripts]
gull = "gull.cli:gull"

[tool.hatch.version]
path = "src/gull/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "black",
  "isort",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
fmt = "black . ; isort ."
clean = 'find . | grep -E "(/__pycache__$|\.pyc$|\.pyo$)" | xargs rm -rf'