[project]
name = "gullplot"
version = "0.1.0"
description = 'Terminal based plotting with seaborn'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Watkins", email = "h.watkins@ucl.ac.uk" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
  "click",
  "seaborn",
  "matplotlib",
  "pandas",
]


[project.scripts]
gullplot = "gullplot.cli:gull"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gullplot"]
